--- a/portfolio02/css/style.css
+++ b/portfolio02/css/style.css
@@ -149,7 +149,45 @@ nav a {
 .keyword .webstandard .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 16px;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+/* Responsive */
+.keyword .Responsive .modal .desc {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.keyword .Responsive .modal .desc .left {
+  width: 66%;
+  height: 700px;
+  overflow: auto;
+}
+
+.keyword .Responsive .modal .desc .right {
+  padding-left: 1%;
+  width: 34%;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+/* Coding_Clone_Site */
+.keyword .Coding_Clone_Site .modal .desc {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.keyword .Coding_Clone_Site .modal .desc .left {
+  width: 66%;
+  height: 700px;
+  overflow: auto;
+}
+
+.keyword .Coding_Clone_Site .modal .desc .right {
+  padding-left: 1%;
+  width: 34%;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -168,7 +206,7 @@ nav a {
 .keyword .parallax_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -187,7 +225,7 @@ nav a {
 .keyword .slider_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -206,7 +244,7 @@ nav a {
 .keyword .quiz_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -225,7 +263,7 @@ nav a {
 .keyword .mouse_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -238,7 +276,7 @@ nav a {
 
 .keyword .photoshop_website .modal .desc .right {
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /*figma_website */
@@ -250,7 +288,7 @@ nav a {
 
 .keyword .figma_website .modal .desc .right {
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* banner_design01 */
@@ -262,7 +300,20 @@ nav a {
 
 .keyword .banner_design01 .modal .desc .right {
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
+  padding: 10px;
+}
+
+/* page_design */
+.keyword .page_design .modal .desc .left {
+  width: 100%;
+  height: 700px;
+  overflow: auto;
+}
+
+.keyword .page_design .modal .desc .right {
+  width: 100%;
+  font-size: 18px;
   padding: 10px;
 }
 
@@ -275,19 +326,17 @@ nav a {
 
 .keyword .banner_design02 .modal .desc .right {
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* banner_design03 */
-.keyword .banner_design03 .modal .desc {}
-
 .keyword .banner_design03 .modal .desc .left {
   width: 100%;
 }
 
 .keyword .banner_design03 .modal .desc .right {
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* Illustrator_icon */
@@ -302,7 +351,7 @@ nav a {
 
 .keyword .Illustrator_icon .modal .desc .right {
   width: 50%;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* img */
@@ -311,6 +360,11 @@ nav a {
 }
 
 /* webstandard img */
+.webstandard>.modal>.desc>.left img {
+  width: 100%;
+}
+
+/* Coding_Clone_Site */
 .webstandard>.modal>.desc>.left img {
   width: 100%;
 }
@@ -372,6 +426,7 @@ nav a {
   position: absolute;
   bottom: 20px;
   right: 30px;
+  font-size: 18px;
 }
 
 .desc>.bot>.site_view {
