--- a/portfolio02/css/style.css
+++ b/portfolio02/css/style.css
@@ -30,8 +30,9 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 1vw;
+  font-size: 4vw;
   padding-right: 2%;
+
 }
 
 #header h1 {
@@ -135,21 +136,22 @@ nav a {
 }
 
 /* webstandard */
-.keyword .webstandard .modal .desc {
+.keyword>.webstandard>.modal>.desc {
   display: flex;
   flex-wrap: wrap;
 }
 
-.keyword .webstandard .modal .desc .left {
+.keyword>.webstandard>.modal>.desc>.left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
-.keyword .webstandard .modal .desc .right {
+.keyword>.webstandard>.modal>.desc>.right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -161,14 +163,15 @@ nav a {
 
 .keyword .Responsive .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .Responsive .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -180,14 +183,15 @@ nav a {
 
 .keyword .Coding_Clone_Site .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .Coding_Clone_Site .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -199,14 +203,15 @@ nav a {
 
 .keyword .parallax_effect .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .parallax_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -218,14 +223,15 @@ nav a {
 
 .keyword .slider_effect .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .slider_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -237,14 +243,15 @@ nav a {
 
 .keyword .quiz_effect .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .quiz_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
@@ -256,77 +263,80 @@ nav a {
 
 .keyword .mouse_effect .modal .desc .left {
   width: 66%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .mouse_effect .modal .desc .right {
   padding-left: 1%;
   width: 34%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
   margin-top: 30px;
 }
 
 /* photoshop_website */
 .keyword .photoshop_website .modal .desc .left {
   width: 100%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .photoshop_website .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
 }
 
 /*figma_website */
 .keyword .figma_website .modal .desc .left {
   width: 100%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .figma_website .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
 }
 
 /* banner_design01 */
 .keyword .banner_design01 .modal .desc .left {
   width: 100%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .banner_design01 .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  font-size: 20px;
   padding: 10px;
 }
 
 /* page_design */
 .keyword .page_design .modal .desc .left {
   width: 100%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .page_design .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  font-size: 20px;
   padding: 10px;
 }
 
 /* banner_design02 */
 .keyword .banner_design02 .modal .desc .left {
   width: 100%;
-  height: 700px;
+  height: 500px;
   overflow: auto;
 }
 
 .keyword .banner_design02 .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 /* banner_design03 */
@@ -336,7 +346,7 @@ nav a {
 
 .keyword .banner_design03 .modal .desc .right {
   width: 100%;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 /* Illustrator_icon */
@@ -351,7 +361,8 @@ nav a {
 
 .keyword .Illustrator_icon .modal .desc .right {
   width: 50%;
-  font-size: 18px;
+  height: 500px;
+  font-size: 20px;
 }
 
 /* img */
@@ -426,30 +437,37 @@ nav a {
   position: absolute;
   bottom: 20px;
   right: 30px;
-  font-size: 18px;
+
 }
 
-.desc>.bot>.site_view {
-  width: 85px;
-  height: 30px;
-  line-height: 30px;
-  font-size: 13px;
+.keyword .modal .desc .bot a:hover:before,
+.keyword .modal .desc .bot a:hover:after {
+  width: 0;
+}
+
+.bot .site_view {
+  width: 90px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 15px;
+  font-weight: normal;
   color: #fff;
   text-align: center;
   position: relative;
-  border-radius: 50px;
+  border-radius: 30px;
   background-color: #333;
 }
 
-.desc>.bot>.code {
-  width: 73px;
-  height: 30px;
-  line-height: 30px;
-  font-size: 13px;
+.bot .code {
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 16px;
+  font-weight: normal;
   color: #fff;
   text-align: center;
   position: relative;
-  border-radius: 50px;
+  border-radius: 30px;
   background-color: #333;
 }
 
@@ -499,4 +517,86 @@ nav a {
 .keyword>div a:before,
 .keyword>div a:after {
   transition: all 0.2s ease;
+}
+
+
+@media (max-width: 1125px) {
+
+  .keyword>.webstandard>.modal>.desc>.right {
+
+    font-size: 13px;
+
+  }
+
+  .keyword .Responsive .modal .desc .right {
+
+    font-size: 13px;
+
+  }
+
+  .keyword .photoshop_website .modal .desc .right {
+
+    font-size: 13px;
+
+  }
+
+}
+
+@media (max-width: 766px) {
+  .keyword .banner_design01 .modal .desc .right {
+
+    font-size: 13px;
+
+  }
+
+  .keyword .photoshop_website .modal .desc .right {
+
+    font-size: 10px;
+
+  }
+
+
+}
+
+@media (max-width: 500px) {
+
+  .keyword>.webstandard>.modal>.desc>.right {
+
+    font-size: 10px;
+
+  }
+
+  .keyword .Responsive .modal .desc .right {
+
+    font-size: 10px;
+
+  }
+
+}
+
+@media (max-width: 330px) {
+
+  .keyword>.webstandard>.modal>.desc>.right {
+
+    font-size: 5px;
+
+  }
+
+  .keyword .Responsive .modal .desc .right {
+
+    font-size: 5px;
+
+  }
+
+  .keyword .banner_design01 .modal .desc .right {
+
+    font-size: 5px;
+
+  }
+
+  .keyword .photoshop_website .modal .desc .right {
+
+    font-size: 4px;
+
+  }
 }
