--- a/responsive web/css/style.css
+++ b/responsive web/css/style.css
@@ -1,148 +1,233 @@
 /* layout */
 #header {
-    background: url(../img/header_bg.jpg) repeat-x center top;
+  background: url(../img/header_bg.jpg) repeat-x center top;
 }
-
+#nav {
+  background-color: #f6fdff;
+}
+#title {
+  background-color: #eaf7fd;
+}
 /* container */
 .container {
-    width: 1200px;
-    margin: 0 auto;
-    background: rgba(0, 0, 0, 0.3);
+  width: 1200px;
+  margin: 0 auto;
+  /* background: rgba(0, 0, 0, 0.3); */
 }
 
 /* header */
 .header {
-    height: 327px;
+  height: 327px;
 }
 
 .header .header_menu {
-    text-align: right;
+  text-align: right;
 }
 
 .header .header_menu a {
-    color: #fff;
-    padding: 8px 0 6px 10px;
-    display: inline-block;
-    transition: color 0.3s ease;
-    font-family: 'Abel', sans-serif;
-
+  color: #fff;
+  padding: 8px 0 6px 10px;
+  display: inline-block;
+  transition: color 0.3s ease;
+  font-family: "Abel", sans-serif;
 }
 
 .header .header_menu a:hover {
-    color: #ccc;
+  color: #ccc;
 }
 
 .header .header_tit {
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 55px;
-    font-family: 'Abel', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 55px;
+  font-family: "Abel", sans-serif;
 }
 
 .header .header_tit h1 {
-    font-size: 30px;
-    color: #fff;
-    background: #51b0dc;
-    display: inline-block;
-    padding: 5px 30px 5px 30px;
-    letter-spacing: 2px;
-    font-weight: 900;
-    transition: box-shadow 0.25s ease-in-out;
-
+  font-size: 30px;
+  color: #fff;
+  background: #51b0dc;
+  display: inline-block;
+  padding: 5px 30px 5px 30px;
+  letter-spacing: 2px;
+  font-weight: 900;
+  transition: box-shadow 0.25s ease-in-out;
 }
 
 .header .header_tit h1:hover {
-    box-shadow: inset -9em 0 0 0 #257fac, inset 9em 0 0 0 #257fac;
-    /* em 상대적인 단위 9em 기본폰트의 9배 */
-
+  box-shadow: inset -9em 0 0 0 #257fac, inset 9em 0 0 0 #257fac;
+  /* em 상대적인 단위 9em 기본폰트의 9배 */
 }
 
 .header .header_tit a {
-    font-size: 16px;
-    color: #fff;
-    background: #4a9abf;
-    display: inline-block;
-    padding: 10px 20px 10px 20px;
-    margin-top: -7px;
-    transition: box-shadow 0.25s ease-in-out;
+  font-size: 16px;
+  color: #fff;
+  background: #4a9abf;
+  display: inline-block;
+  padding: 10px 20px 10px 20px;
+  margin-top: -7px;
+  transition: box-shadow 0.25s ease-in-out;
 }
 
 .header .header_tit a:hover {
-    box-shadow: 0 0 0 5px rgba(75, 154, 191, 0.9) inset,
-        inset 0 0 0 100px rgba(0, 0, 0, .1);
+  box-shadow: 0 0 0 5px rgba(75, 154, 191, 0.9) inset,
+    inset 0 0 0 100px rgba(0, 0, 0, 0.1);
 }
 
 .header .header_icon {
-    text-align: center;
-    margin-top: 40px;
-    padding-bottom: 45px;
-
+  text-align: center;
+  margin-top: 40px;
+  padding-bottom: 45px;
 }
 
 .header .header_icon li {
-    display: inline;
-    margin: 0 2px;
+  display: inline;
+  margin: 0 2px;
 }
 
 .header .header_icon li a {
-    background-color: #3192bf;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    color: #fff;
-    display: inline-block;
-    font-size: 30px;
-    line-height: 60px;
-    position: relative;
-    transition: all 0.3s ease;
-
+  background-color: #3192bf;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  color: #fff;
+  display: inline-block;
+  font-size: 30px;
+  line-height: 60px;
+  position: relative;
+  transition: all 0.3s ease;
 }
 
 .header .header_icon li a span {
-    /* opacity: 0; */
-    position: absolute;
-    left: 50%;
-    top: -40px;
-    transform: translateX(-50%);
-    font-size: 12px;
-    line-height: 1.6;
-    background: #3192bf;
-    padding: 3px 9px;
-    border-radius: 6px 0;
-    opacity: 0;
-    transition: all 0.3s ease;
+  /* opacity: 0; */
+  position: absolute;
+  left: 50%;
+  top: -40px;
+  transform: translateX(-50%);
+  font-size: 12px;
+  line-height: 1.6;
+  background: #3192bf;
+  padding: 3px 9px;
+  border-radius: 6px 0;
+  opacity: 0;
+  transition: all 0.3s ease;
 }
 
 .header .header_icon li a span:before {
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: -5px;
-    margin-left: -5px;
-    border-top: 5px solid#3192bf;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    /* 삼각형화살표만들기 */
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  margin-left: -5px;
+  border-top: 5px solid#3192bf;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  /* 삼각형화살표만들기 */
 }
 
 .header .header_icon li a:hover span {
-    opacity: 1;
-    top: -33px;
+  opacity: 1;
+  top: -33px;
 }
 
 .header .header_icon li a:hover {
-    box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset,
-        inset 0 0 0 100px rgba(0, 0, 0, .1);
-    ;
+  box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset,
+    inset 0 0 0 100px rgba(0, 0, 0, 0.1);
+}
+/* 전체메뉴 */
+.nav {
+  overflow: hidden;
+  padding: 25px 0;
+}
+.nav > div {
+  float: left;
+  width: 40%;
+}
+.nav > div:last-child {
+  width: 20%;
+}
+.nav > div ol {
+  overflow: hidden;
+}
+.nav > div li {
+  float: left;
+  width: 50%;
+  position: relative;
+  padding-left: 8px;
+  box-sizing: border-box;
+}
+.nav > div li::before {
+  content: "";
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #25a2d0;
+  position: absolute;
+  left: 0;
+  top: 6px;
+}
+.nav > div:last-child li {
+  width: 100%;
+}
+.nav > div h3 {
+  font-size: 18px;
+  color: #25a2d0;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+.nav > div li a {
+  position: relative;
 }
 
-@media (max-width:1220px) {
-    .container {
-        width: 100%;
-    }
+.nav > div li a:after {
+  content: "";
+  display: inline-block;
+  height: 1px;
+  background: #25a2d0;
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+}
+.nav > div li:hover a:after {
+  opacity: 1;
+  width: 100%;
+}
+/* title */
+.title {
+  text-align: center;
+  position: relative;
+}
+.title h2 {
+  font-family: "Nanum Brush Script", cursive;
+  font-size: 39px;
+  color: #0093bd;
+  padding: 5px 0;
+}
+.title .btn {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  background: #3192bf;
+  color: #fff;
+  font-size: 35px;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+.title .btn:hover {
+  box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset,
+    0 0 0 100px rgba(0, 0, 0, 0.1) inset;
+}
+@media (max-width: 1220px) {
+  .container {
+    width: 100%;
+  }
 
-    .row {
-        padding: 0 15px;
-    }
-
+  .row {
+    padding: 0 15px;
+  }
 }
