--- a/responsive web/css/style.css
+++ b/responsive web/css/style.css
@@ -1,15 +1,46 @@
 /* layout */
-#header {
+body {
   background: url(../img/header_bg.jpg) repeat-x center top;
+}
+#header {
 }
 #nav {
   background-color: #f6fdff;
+  display: none;
 }
 #title {
   background-color: #eaf7fd;
 }
+#contents .container {
+  border-right: 1px solid #dbdbdb;
+  border-left: 1px solid #dbdbdb;
+}
+/* cont_left영역에  float: left; cont_center영역에  overflow: hidden;을 주면서 영역잡힘  */
+#cont_left {
+  float: left;
+  width: 250px;
+}
+
+#cont_center {
+  overflow: hidden;
+  min-height: 1300px;
+  margin-right: 250px;
+  border-right: 1px solid #dbdbdb;
+  border-left: 1px solid #dbdbdb;
+}
+#cont_right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 250px;
+}
+#footer {
+  border-top: 1px solid #dbdbdb;
+}
+
 /* container */
 .container {
+  position: relative;
   width: 1200px;
   margin: 0 auto;
   /* background: rgba(0, 0, 0, 0.3); */
@@ -222,12 +253,231 @@
   box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset,
     0 0 0 100px rgba(0, 0, 0, 0.1) inset;
 }
+/* contents 영역 */
+.column {
+  padding: 15px;
+  border-bottom: 1px solid #dbdbdb;
+}
+.column .col_tit {
+  font-size: 20px;
+  color: #2f7fa6;
+  background-position: 5px;
+}
+.column .col_desc {
+  border-bottom: 1px dashed #dbdbdb;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  color: #878787;
+  line-height: 18px;
+}
+.column.col1 {
+}
+.column.col2 {
+}
+.column.col3 {
+  border-bottom: 0;
+}
+.column.col4 {
+}
+.column.col5 {
+}
+.column.col6 {
+  border-bottom: 0;
+}
+.column.col7 {
+}
+.column.col8 {
+}
+.column.col9 {
+  border-bottom: 0;
+}
+/* menu */
+.menu {
+}
+.menu li {
+  position: relative;
+}
+.menu li a {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #878787;
+  border-bottom: 1px solid #dbdbdb;
+  padding: 10px;
+  display: block;
+  transition: box-shadow 0.34s ease, background 0.34s ease;
+}
+.menu li a i {
+  position: absolute;
+  right: 10px;
+  top: 15px;
+}
+.menu li a:hover {
+  box-shadow: inset 180px 0 0 0 rgba(36, 130, 174, 0.7);
+  color: #fff;
+  background: rgba(36, 130, 174, 0.9);
+}
+/* 게시판 */
+.notice1 {
+}
+.notice1 h5 {
+  font-size: 14px;
+  color: #2f7fa6;
+  padding-bottom: 5px;
+}
+.notice1 li {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-left: 8px;
+  position: relative;
+}
+.notice1 li:before {
+  content: "";
+  border-radius: 50%;
+  width: 3px;
+  height: 3px;
+  background: #449ce2;
+  position: absolute;
+  left: 0;
+  top: 6px;
+}
+.notice1 .more {
+  position: absolute;
+  right: 0;
+  top: 3px;
+  color: #878787;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+
+.notice2 {
+}
 @media (max-width: 1220px) {
   .container {
     width: 100%;
   }
-
   .row {
     padding: 0 15px;
+  }
+  #contents .container {
+    border: 0;
+    /* 보더값도 스크롤바 생기는 원인이 될수 있으니 주의 */
+  }
+  .title .btn {
+    right: 5px;
+  }
+  #cont_center {
+    margin-right: 0;
+    border-right: 0;
+  }
+}
+@media (max-width: 1024px) {
+}
+
+@media (max-width: 960px) {
+  #cont_right {
+    position: static;
+    width: 100%;
+    border-top: 1px solid #dbdbdb;
+  }
+  /*   position: absolute;를 기본으로바꾸려면 
+    position: static;로
+ */
+  .nav > div {
+    float: none;
+    width: 100%;
+  }
+  .nav > div:last-child {
+    width: 100%;
+  }
+  .nav > div li {
+    width: 33.333%;
+  }
+  .nav > div:last-child li {
+    width: 33.333%;
+  }
+  .nav > div ol {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  #cont_left {
+    float: none;
+    width: 100%;
+  }
+  #cont_center {
+    border-left: 0;
+  }
+}
+@media (max-width: 600px) {
+  .header {
+    height: auto;
+  }
+  .header_tit {
+    display: none;
+  }
+  .header_icon {
+    display: none;
+  }
+  .title .btn {
+    display: none;
+  }
+  .nav > div li {
+    width: 50%;
+  }
+  .nav > div:last-child li {
+    width: 50%;
+  }
+  .column.col1 {
+    padding: 0;
+    border-bottom: 0;
+  }
+  .column.col1 .menu ul {
+    overflow: hidden;
+  }
+  .column.col1 .menu li {
+    float: left;
+    width: 33.3333%;
+    text-align: center;
+    border-right: 1px solid #dbdbdb;
+    box-sizing: border-box;
+  }
+  .column.col1 .menu li:nth-child(3n) {
+    border-right: 0;
+  }
+  .column.col1 .menu li a {
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+  }
+  .column.col1 .menu li a:hover {
+    box-shadow: none;
+    background: rgba(36, 130, 174, 0.3);
+  }
+
+  .column.col1 .menu li a i {
+    display: none;
+  }
+  .column.col1 .col_tit {
+    display: none;
+  }
+  .column.col1 .col_desc {
+    display: none;
+  }
+  .column.col2 {
+    background: #fff;
+  }
+  .column.col4 {
+    border-top: 1px solid #dbdbdb;
+  }
+}
+@media (max-width: 480px) {
+}
+@media (max-width: 320px) {
+  .nav > div li {
+    width: 100%;
+  }
+  .nav > div:last-child li {
+    width: 100%;
   }
 }
