--- a/portfolio02/css/style.css
+++ b/portfolio02/css/style.css
@@ -72,9 +72,10 @@ nav a {
   text-transform: uppercase;
 }
 
-.keyword {}
+.keyword {
+}
 
-.keyword>div {
+.keyword > div {
   font-size: 3vw;
   display: inline-block;
   margin-right: 2vw;
@@ -82,7 +83,7 @@ nav a {
   position: relative;
 }
 
-.keyword>div .modal {
+.keyword > div .modal {
   background: rgba(211, 205, 190, 0.7);
   backdrop-filter: blur(10px);
   width: 80%;
@@ -97,7 +98,7 @@ nav a {
   transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-.keyword>div .modal h3 {
+.keyword > div .modal h3 {
   line-height: 1;
   font-size: 30px;
   margin-bottom: 30px;
@@ -135,23 +136,22 @@ nav a {
 }
 
 /* webstandard */
-.keyword>.webstandard>.modal>.desc {
+.keyword > .webstandard > .modal > .desc {
   display: flex;
   flex-wrap: wrap;
 }
 
-.keyword>.webstandard>.modal>.desc>.left {
+.keyword > .webstandard > .modal > .desc > .left {
   width: 66%;
   height: 500px;
   overflow: auto;
 }
 
-.keyword>.webstandard>.modal>.desc>.right {
+.keyword > .webstandard > .modal > .desc > .right {
   padding-left: 2%;
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* Responsive */
@@ -171,7 +171,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* Coding_Clone_Site */
@@ -191,7 +190,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* parallax_effect */
@@ -211,7 +209,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* slider_effect */
@@ -231,7 +228,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* quiz_effect */
@@ -251,7 +247,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* mouse_effect */
@@ -271,7 +266,6 @@ nav a {
   width: 34%;
   height: 500px;
   font-size: 20px;
-
 }
 
 /* photoshop_website */
@@ -286,7 +280,6 @@ nav a {
   height: 500px;
   font-size: 20px;
   margin-top: 10px;
-
 }
 
 /*figma_website */
@@ -373,35 +366,35 @@ nav a {
 }
 
 /* img */
-.keyword>div .modal .desc .left img {
+.keyword > div .modal .desc .left img {
   border-radius: 10px;
 }
 
 /* webstandard img */
-.webstandard>.modal>.desc>.left img {
+.webstandard > .modal > .desc > .left img {
   width: 100%;
 }
 
 /* Coding_Clone_Site */
-.webstandard>.modal>.desc>.left img {
+.webstandard > .modal > .desc > .left img {
   width: 100%;
 }
 
 /* mouse_effect img */
-.mouse_effect>.modal>.desc>.left img {
+.mouse_effect > .modal > .desc > .left img {
   margin-bottom: 5px;
 }
 
 /* banner_design img */
-.banner_design01>.modal>.desc>.left img {
+.banner_design01 > .modal > .desc > .left img {
   margin-bottom: 5px;
 }
 
-.banner_design02>.modal>.desc>.left img {
+.banner_design02 > .modal > .desc > .left img {
   margin-bottom: 5px;
 }
 
-.banner_design03>.modal>.desc>.left img {
+.banner_design03 > .modal > .desc > .left img {
   width: 47%;
   margin-bottom: 5px;
   display: inline;
@@ -412,28 +405,28 @@ nav a {
   width: 100%;
 }
 
-.banner_design03>.modal>.desc>.left img:nth-child(3) {
+.banner_design03 > .modal > .desc > .left img:nth-child(3) {
   width: 95%;
 }
 
-.banner_design03>.modal>.desc>.left img:nth-child(4) {
+.banner_design03 > .modal > .desc > .left img:nth-child(4) {
   width: 30%;
 }
 
-.banner_design03>.modal>.desc>.left img:nth-child(5) {
+.banner_design03 > .modal > .desc > .left img:nth-child(5) {
   width: 30%;
 }
 
-.banner_design03>.modal>.desc>.left img:nth-child(6) {
+.banner_design03 > .modal > .desc > .left img:nth-child(6) {
   width: 30%;
 }
 
 /* Illustrator_icon img*/
-.Illustrator_icon>.modal>.desc>.left img {
+.Illustrator_icon > .modal > .desc > .left img {
   width: 100%;
 }
 
-.keyword>div .modal .close {
+.keyword > div .modal .close {
   position: absolute;
   right: 30px;
   top: 20px;
@@ -481,11 +474,11 @@ nav a {
   background-color: #333;
 }
 
-.keyword>div.open .modal {
+.keyword > div.open .modal {
   top: 10%;
 }
 
-.keyword>div span {
+.keyword > div span {
   position: absolute;
   top: 0px;
   left: 50%;
@@ -497,13 +490,13 @@ nav a {
   transition: all 0.3s ease-in-out;
 }
 
-.keyword>div a:hover+span {
+.keyword > div a:hover + span {
   transform: translateX(-50%) translateY(-15px);
   opacity: 1;
 }
 
-.keyword>div a:before,
-.keyword>div a:after {
+.keyword > div a:before,
+.keyword > div a:after {
   content: "";
   border-bottom: solid 2px #000;
   position: absolute;
@@ -511,21 +504,21 @@ nav a {
   width: 0;
 }
 
-.keyword>div a:before {
+.keyword > div a:before {
   left: 0;
 }
 
-.keyword>div a:after {
+.keyword > div a:after {
   right: 0;
 }
 
-.keyword>div a:hover:before,
-.keyword>div a:hover:after {
+.keyword > div a:hover:before,
+.keyword > div a:hover:after {
   width: 50%;
 }
 
-.keyword>div a:before,
-.keyword>div a:after {
+.keyword > div a:before,
+.keyword > div a:after {
   transition: all 0.2s ease;
 }
 
@@ -534,13 +527,16 @@ nav a {
   font-size: 30px;
   font-weight: 100;
 }
+.mail {
+  margin-bottom: 30px;
+}
 
 .phon {
   font-size: 25px;
 }
 
 @media (max-width: 1125px) {
-  .keyword>.webstandard>.modal>.desc>.right {
+  .keyword > .webstandard > .modal > .desc > .right {
     font-size: 13px;
   }
 
@@ -564,7 +560,7 @@ nav a {
 }
 
 @media (max-width: 500px) {
-  .keyword>.webstandard>.modal>.desc>.right {
+  .keyword > .webstandard > .modal > .desc > .right {
     font-size: 10px;
   }
 
@@ -574,7 +570,7 @@ nav a {
 }
 
 @media (max-width: 330px) {
-  .keyword>.webstandard>.modal>.desc>.right {
+  .keyword > .webstandard > .modal > .desc > .right {
     font-size: 5px;
   }
 
