--- a/clone/css/style.css
+++ b/clone/css/style.css
@@ -2,6 +2,7 @@
 #header {
   width: 100%;
   border-bottom: 1px solid #c6c6c6;
+  background-color: #fff;
 }
 
 #banner {
@@ -575,13 +576,7 @@
 }
 
 @media (max-width: 600px) {
-  #movie .row {
-   margin: 8px;padding: 16px;
-  }
-  #movie .ir_so{
-   font-size: 18px;
-   padding-bottom: 10px;
-  }
+
   .slider {
     height: 400px;
   }
@@ -623,6 +618,38 @@
     height: 13px !important;
   }
 
+
+  #movie .container{
+
+  }
+   #movie .container:after{
+   content: '';
+position: absolute;z-index: 20;top: 0;right: 0;width: 8px;height: 100%;
+background: #d9d7e0; 
+  }
+  #movie .row {
+    position: relative;
+   margin: 8px;padding: 16px;
+   margin-right: 0;padding-right: 0;
+  }
+    #movie .row::after{
+      content: '';
+      position: absolute;top: 0;right: 0;z-index: 10;width: 24px;height: 100%;background-color: #fff;
+    }
+  #movie .ir_so{
+   font-size: 18px;
+   padding-bottom: 10px;
+  }
+ .movie_title {
+  margin-bottom: 20px;
+}
+.movie_title ul{
+  padding-bottom: 8px; 
+        white-space: nowrap;
+  overflow-x: auto; 
+
+}
+
  .movie_title li a {
   font-size: 14px;
   margin-right: 15px;
@@ -631,11 +658,15 @@
   bottom: -8px;
   
  }
-.movie_title ul{
-  padding-bottom: 8px;  
+ .movie_chart{
+position: relative;
+z-index: 30;
+ }
+.movie_chart > div > div > div .infor{
+  padding: 5px;
 }
 .movie_chart > div > div > div .infor h3{
-  padding: 5px;
+margin: 5px 0 10px;
   text-align: center;
 }
 .movie_chart > div > div > div .infor h3 strong{
@@ -656,9 +687,13 @@ font-size: 14px;background: none;border: 1px solid#ddd;
 .movie_chart > div > div > div .infor_btn a:last-child{
 display: none;
 }
+
 }
 
 @media (max-width: 480px) {
 }
 @media (max-width: 320px) {
+  .movie_title li a{
+    margin-right: 9px;
+  }
 }
